<resources>
    <string name="app_name">Movie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_sort_label">Sort</string>
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_popularity">popularity</string>
    <string name="pref_sort_popularity_label">Popularity</string>
    <string name="pref_sort_vote">vote_average</string>
    <string name="pref_sort_vote_label">Vote</string>
    <string name="overview_label">Synopsis</string>
    <string name="release_date_label">Release date</string>
    <string name="rating_label">Rating</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="pref_sort_favorite_label">Favorite</string>
    <string name="pref_sort_favorite">favorite</string>
    <string name="movie_title">Movie</string>
    <string name="no_reviews">No reviews</string>
    <string name="no_trailers">No trailers</string>
    <string name="no_movies">No movies</string>
    <string name="no_network_detail">No network. Impossible to get data.</string>
    <string name="no_network_main">Network unreachable.\n Only favorites movies are available.\n Change sort order in (Settings -> Sort).</string>
</resources>
