<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.thomasthiebaud.android.movie.controller.fragment.DetailFragment">

        <ImageView
            android:id="@+id/poster"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Label"
                    android:text= "@string/overview_label"/>

                <View style="@style/Divider"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/default_padding"/>

                <View style="@style/Divider"/>


                <TextView
                    style="@style/Label"
                    android:text= "@string/release_date_label"/>

                <View style="@style/Divider"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/default_padding"/>

                <View style="@style/Divider"/>

                <TextView
                    style="@style/Label"
                    android:text= "@string/rating_label"/>

                <View style="@style/Divider"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="10"
                    android:stepSize="1.0"
                    android:isIndicator="true"
                    android:padding="@dimen/default_padding"
                    style="?android:attr/ratingBarStyleSmall"/>

                <View style="@style/Divider"/>

                <TextView
                    style="@style/Label"
                    android:text= "@string/trailers_label"/>

                <View style="@style/Divider"/>

                <com.example.thomasthiebaud.android.movie.view.NestedListView
                    android:id="@+id/trailers_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:orientation="vertical"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/empty_trailers_label"
                    android:padding="@dimen/default_padding"
                    android:text="@string/no_trailers"/>

                <View style="@style/Divider"/>

                <TextView
                    style="@style/Label"
                    android:text= "@string/reviews_label"/>

                <View style="@style/Divider"/>

                <com.example.thomasthiebaud.android.movie.view.NestedListView
                    android:id="@+id/reviews_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:orientation="vertical"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/empty_reviews_label"
                    android:padding="@dimen/default_padding"
                    android:text="@string/no_reviews"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:clickable="true"
        android:src="@drawable/ic_favorite_border_black"
        app:backgroundTint="@android:color/white"
        app:layout_anchor="@id/poster"
        app:layout_anchorGravity="top|right|end"/>
</android.support.design.widget.CoordinatorLayout>